Work from work computer

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -7,43 +7,27 @@ layout: default
 <div class="person-wrapper">
 	<div class="person-main-content" aria-label="Main content">
 
-		<div class="person__big-title"><span aria-label="page type">People //</span>{{ page.name }}!</div>
+		<div class="person__big-title"><span aria-label="page type">People //</span>{{ page.name }}</div>
 
-		{% if page.status != "not_current" and page.people-category != "student" %}
-<div class="person__position">{{ page.position }}</div>
-		{% endif %}
-
- {% assign pr = person.role %}
-				<!-- former staff: -->
-                {% if pr contains 'staff' %}
-                <div class="person__position">Former {{ person.position }}</div>
-                {% endif %}
-
-			    <!-- former non-staff -->
-<!-- Checking whether a role includes a comma to see if a year is listed or if we need to instead prepend with "Former" -->
-                {% unless pr contains 'staff' %}
-				{% for item in person.roles %}
-					{% if item contains "20" %}
-      					<div class="person__position">{{ item }}</div>
-					{% endif %}
-					{% unless item contains '20' %}
-						{% if person.people-category contains "staff" %}
-						<div class="person__position">Former {{ person.position }}</div>	
-						{% elsif person.people-category contains "student" %}
-						<div class="person__position">Former {{ person.roles.first }}</div>	
-						{% endif %}
-					{% endunless %}
-				{% endfor %}
-  				{% endunless %}
-            </ul>
+<div class="person__position">
+{% if page.status == current %}
+	{% if page.people-category == student %}
+	<div class="person__position">{{ page.roles }}</div>
+	{% elsif page.people-category == staff %}
+	<div class="person__position">{{ page.position }}</div>
+	{% endif %}
+{% elsif page.status == not_current %}
+	{% if page.people-category == student %}
+	<div class="person__position">{{ page.roles }}</div>
+	{% elsif page.people-category == staff %}
+	<div class="person__position">Former {{ page.position }}</div>
+	{% endif %}
+{% endif %}
 
 
 
 
-
-
-
-
+</div>
 
 
 
