Remove non-breaking space from "More" button
- Handle placement w/ CSS transform instead (more exact, looked slightly
  off before)

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
 		{% endif %}
 		{% endfor %}
 			<li class="flexnav__more-menu">
-				<div class="flexnav-more__prompt" aria-label="More menu items">More &nbsp;<span>&rsaquo;</span></div>
+				<div class="flexnav-more__prompt" aria-label="More menu items">More<span>&rsaquo;</span></div>
 				<ul class="flexnav-more__wrapper">
 				{% for page in pages %}
 				{% if page.layout != nil and page.nav %}
