Nav link attribute selector: tweak color, position, move transition
- Transition will be moved below to each individual link list (there
  are different styles needed for each)

--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -50,20 +50,14 @@ ul[class*="flexnav"] {
 
 [class*="flexnav"][class*="__item"] {
 	a {
+		position: relative;
 		display: inline-block;
-		padding-bottom: .5em;
 		font-family: "base-mono-wide", monospace;
 		font-weight: 200;
 		text-decoration: none;
-		color: hsla(186,80%,80%,1);
-		border-bottom: 1px solid hsla(186,80%,80%,1);
-		-moz-transition: color .3s;
-		-webkit-transition: color .3s;
-		transition: color .3s;
+		text-transform: uppercase;
+		color: white;
 		white-space: nowrap;
-		&:hover, &:focus {
-			color: hsla(186,80%,50%,1);
-		}
 	}
 }
 
