--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -76,6 +76,27 @@ ul[class*="flexnav"] {
 
 .flexnav__item {
 	padding-right: 2em;
+	a {
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: -.25em;
+			left: 0;
+			display: block;
+			width: 0%;
+			height: 2px;
+			background-color: transparent;
+			-moz-transition: background-color .3s ease-out, width .3s ease-out;
+			-webkit-transition: background-color .3s ease-out, width .3s ease-out;
+			transition: background-color .3s ease-out, width .3s ease-out;
+		}
+		&:hover, &:focus {
+			&::after {
+				width: 100%;
+				background-color: hsla(186,80%,70%,1);
+			}
+		}
+	}
 }
 
 // li, level 1
