Move home icon link to an include file
- Makes it less messy, which will help for when we use an SVG

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <div class="flexnav-wrapper">
 	<div class="flexnav-main">
 		<div class="flexnav__home-icon">
-			<a href="{{ site.url }}" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/svg/8bit-beaker.svg' | relative_url }}" alt="Beaker by Cuby Design for the Noun Project" title="Courtesy of Cuby Design"></a>
+			{% include nav-logo.html %}
 		</div>
 
 		<ul class="flexnav-main-grid">
