--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,9 @@
 <div class="flexnav-wrapper">
 	<div class="flexnav-main">
 		<div class="flexnav__home-icon">
-			{% include nav-logo.html %}
+			<a href="{{ site.url }}" aria-label="Scholars' Lab home">
+				{% include nav-logo.html %}
+			</a>
 		</div>
 
 		<ul class="flexnav-main-grid">
