Adjust SVG top padding to align top w/ nav links

--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -40,6 +40,7 @@
 	grid-template-areas: "s c h o l a r y z";
 	text-transform: uppercase;
 	line-height: 1;
+	padding-top: 14px;
 //	background-color: white;
 	svg {
 		height: 2rem;
