Add explanatory comment re. blend modes

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -1,7 +1,7 @@
 /* Homepage, Version 2 */
 
 html, body {
-	background-color: white;
+	background-color: white; // blend modes need this to work
 }
 /* ## Universal styles: */
 
