Mimic margin collapse for section content
- Some sections are styled as flexboxes and thus don't collapse
  the margins at all

- Looks the same on the rest of them, except Makerspace b/c there's
  an absolutely positioned floaty thing underneath (will fix)

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -28,6 +28,13 @@ html, body {
 	border: 1px solid black;
 }
 
+[class*="home-"][class*="__text"],
+[class*="home-"][class*="__content"]{
+	p:first-of-type {
+		margin-top: 0 !important; // no margin collapse if in flexboxes
+	}
+}
+
 /* ## Main styles: */
 
 .home-wrapper {
