--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -138,6 +138,12 @@ html, body {
 			font-size: 2.25rem;
 		}
 	}
+	@media screen and (min-width: 1200px) {
+		h3 {
+			font-size: calc(18px * 2.25);
+			margin-bottom: .5em;
+		}
+	}
 }
 
 .home-hero__hook {
