Adds meta elements for Twitter Cards.
Refs #15.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,13 @@
   <meta property="og:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
   {% if page.image %}<meta property="og:image" content="{{ page.image }}">{% endif %}
 
+  <!-- Twitter Cards https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/summary -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="{{ site.twitter_username }}">
+  <meta name="twitter:title" content="{{ fulltitle }}">
+  <meta name="twitter:description" content="{{ page.excerpt | default: site.description }}">
+  {% if page.image %}<meta property="twitter:image" content="{{ page.image }}">{% endif %}
+
   <link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,400i,600,700,700i,900|Oswald:200,400,600,700|Inconsolata:400,700|VT323" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/xpo3dxq.css">
   <link rel="stylesheet" href="{{ "assets/css/style.css" | relative_url }}">
