--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -66,7 +66,7 @@ html, body {
 	height: 100vh;
 	width: 100%;
 	align-items: center;
-	font-size: 2em;
+	font-size: 2.25em;
 	font-weight: 900;
 	line-height: 1;
 	text-transform: uppercase;
@@ -88,15 +88,36 @@ html, body {
 	span {
 		display: inline-block;
 	}
+	@media screen and (min-width: 350px) {
+		font-size: 2.5em;
+	}
 	@media screen and (min-width: 600px) {
 		font-size: 3em;
 	}
 	@media screen and (min-width: 768px) {
+		font-size: 3.5em;
+	}
+	@media screen and (min-width: 1024px) {
 		font-size: 4em;
-	//	padding-left: 2.25rem;
 	}
 	@media screen and (min-width: 1400px) {
 		font-size: 5em;
+	}
+}
+
+/* Size Breakpoints: */
+
+.show-if-big--css {
+	display: none !important;
+	@media screen and (min-width: 600px) {
+		display: inline-block !important;
+	}
+}
+
+.show-if-small--css {
+	display: inline-block !important;
+	@media screen and (min-width: 600px) {
+		display: none !important;
 	}
 }
 
