Add page & text-based page layouts w/ requisite SCSS partial
- Pulling from kbdonnally's Patterns repo

- Changed the shade of purple used so it compiled okay, but
  haven't made any other changes (e.g. a font is missing rn)

--- a/_layouts/page--text.html
+++ b/_layouts/page--text.html
@@ -1,7 +1,8 @@
 ---
+# if page is just writing -> narrower width
 layout: default
 ---
-<article class="page-wrapper">
+<article class="page-wrapper--text">
 
   <header class="page-title-wrapper">
     <h1 class="page-title__text">{{ page.title | escape | replace: ' - ', ': ' }}</h1>
