--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,7 @@ main {
 @import "universal-styles";
 @import "home";
 @import "navbar";
+@import "page";
 // @import "amanda";
 @import "logos";
 @import "makerspace";
