--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,9 @@ layout: default
 ---
 <article class="page-wrapper">
 
-  <header class="page-title-wrapper">
-    <h1 class="page-title__text">{{ page.title | escape | replace: ' - ', ': ' }}</h1>
+  <header class="page-header-wrapper">
+    <h1 class="page-header__big-title"><span>{{ page.title | escape | replace: ' - ', ': ' | replace: ' and ', ' &amp; ' }}</span></h1>
+    <h3 class="page-header__subtitle">{{ page.excerpt }}</h3>
   </header>
 
   <div class="page-main-content">
