Edit page layout to work for SLab site
- Adjust font sizes & families

- Adjust colors

- Add knockout text at beginning (iffy)

- Style subtitle

--- a/assets/css/_sass/_page.scss
+++ b/assets/css/_sass/_page.scss
@@ -2,14 +2,17 @@
 
 .page-wrapper, .page-wrapper--text {
 	position: relative;
-	padding: 0em 4.167%;
+	padding: 1em 4.167%;
 	padding-bottom: 3em;
 	@media screen and (min-width: 600px) {
-		padding: 0em 8.33%;
-		padding-bottom: 3em;
+		padding: 3em 8.33%;
 	}
 	@media screen and (min-width: 768px) {
-		font-size: 1.125rem; // 18px
+		font-size: 1.25rem; // 18px
+	}
+	@media screen and (min-width: 1020px) {
+		max-width: calc(900px + 16.67%);
+		margin: 0 auto;
 	}
 }
 
@@ -20,16 +23,66 @@
 	}
 }
 
-.page-title-wrapper {
+.page-header-wrapper {
 
 }
 
-.page-title__text {
-	margin-top: 1.5em !important;
+.page-header__big-title {
+	position: relative;
+	display: grid;
+//	height: 100vh;
+//	width: 100%;
+//	align-items: center;
+//	font-size: 2.25em;
+//	font-weight: 900;
+	line-height: 1.2 !important;
+	margin: .15em 0 !important;
+//	text-transform: uppercase;
+	color: $navgray !important;
+	background-color: white;
+	mix-blend-mode: multiply;
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: $grape;
+		background-image: linear-gradient(rgba(255,255,255,.1), rgba(255,255,255,.1)), url('../img/decorative/rawpixel-661939-unsplash--cropped.jpg');
+		background-size: cover;
+		background-position: left center;
+		mix-blend-mode: screen;
+	}
+	span {
+		display: inline-block;
+		text-shadow: 0 0 1px rgba(0,0,0,.5);
+		padding-bottom: 8px;
+		border-bottom: 8px solid $navgray;
+	}
+}
+
+.page-header__subtitle {
+	font-weight: 200 !important;
+	font-family: "base-mono-narrow", monospace !important;
+//	line-height: 1.2 !important;
+	color: rgba(0,0,0,.5) !important;
 }
 
 .page-main-content {
-	color: hsl(186,1%,25%);
+	color: $textgray;
+	h2[id] {
+		&::before {
+			content: '\0023'; // '#' in UTF-8
+			position: absolute;
+			top: 0;
+			left: -1em;
+			display: block;
+			font-size: 1em;
+			color: $darkpastelpurple;
+			opacity: .5;
+		}
+	}
 }
 
 /* Attribute Selectors: */
@@ -39,20 +92,19 @@
 		position: relative;
 		font-weight: 700;
 		line-height: 1;
-		color: black;
+		color: $textgray;
 	}
 	// headers
 	h1 {
-		margin-bottom: .5em;
-		margin-top: .5em;
-		font-size: 2rem;
+		margin: .25em 0;
+		font-size: 3rem;
 		font-weight: 900;
 		@media screen and (min-width: 768px) {
-			margin-top: 1em;
-			font-size: 2.5rem;
+	//		margin-top: 1em;
+			font-size: 5rem;
 		}
 		@media screen and (min-width: 1020px) {
-			font-size: 3rem;
+			font-size: 6.25rem;
 		}
 	}
 	// section titles
@@ -60,36 +112,38 @@
 		margin-top: .5em;
 		margin-bottom: .75em;
 		padding-bottom: calc(.25em - 2px);
-		font-size: 1.625rem;
-		font-family: "Sunflower", sans-serif;
+		font-size: calc(1.625rem * 10/9);
+		font-family: "Oswald", sans-serif;
+		font-weight: 600;
 		border-bottom: 2px solid $brightgrape;
 		@media screen and (min-width: 768px) {
 			margin-top: 1em;
-			font-size: 2rem;
+			font-size: calc(2rem * 10/9);
 		}
 		@media screen and (min-width: 1020px) {
-			font-size: 2.25rem;
+			font-size: calc(2.25rem * 10/9);
 		}
 	}
 	// subtitles
 	h3 {
 		margin-top: .5em;
 		margin-bottom: .5em;
-		font-size: 1.375rem;
-		font-family: "Sunflower", sans-serif;
+		font-size: calc(1.375rem * 10/9);
+		font-family: "Oswald", sans-serif;
+		font-weight: 600;
 		@media screen and (min-width: 768px) {
 			margin-top: 1em;
-			font-size: 1.5rem;
+			font-size: calc(1.5rem * 10/9);
 		}
 		@media screen and (min-width: 1020px) {
-			font-size: 1.625rem;
+			font-size: calc(1.75rem * 10/9);
 		}
 	}
 	h4 {
 		margin-top: .5em;
 		margin-bottom: .5em;
 		padding-bottom: .25em;
-		font-size: 1.125rem;
+		font-size: calc(1.125rem * 10/9);
 		@media screen and (min-width: 768px) {
 			margin-top: 1em;
 		}	
