--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -124,7 +124,7 @@
 	}
 	a {
 		text-decoration: none;
-		color: black;
+		color: $textgray;
 	}
 	@media screen and (min-width: 768px) {
 		font-size: 2rem;
