--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -92,7 +92,8 @@
 	height: 60px;
 	margin-right: 1rem;
 	margin-bottom: 1rem;
-	border: 2px solid magenta;
+	color: $textgray;
+	border: 2px solid $brightgrape;
 	border-radius: 50%;
 	div {
 		font-family: "Oswald", sans-serif;
@@ -122,7 +123,7 @@
 	line-height: 1;
 	a {
 		text-decoration: none;
-		color: black;
+		color: $textgray;
 	}
 	@media screen and (min-width: 768px) {
 		font-size: 2.25rem;
@@ -165,8 +166,8 @@
 	a {
 		margin-top: 0 !important;
 		font-size: 1rem !important;
-		color: magenta !important;
-		border-color: magenta !important;
+		color: $brightgrape !important;
+		border-color: $brightgrape !important;
 	}
 	@media screen and (max-width: 767px) {
 		a {
