--- a/assets/css/_sass/_page.scss
+++ b/assets/css/_sass/_page.scss
@@ -44,10 +44,10 @@
 	&::before {
 		content: '';
 		position: absolute;
-		top: 0;
+		top: calc(100% - 8px);
 		left: 0;
 		width: 100%;
-		height: 100%;
+		height: 8px;
 		background-color: $grape;
 		background-image: linear-gradient(rgba(255,255,255,.1), rgba(255,255,255,.1)), url('../img/decorative/rawpixel-661939-unsplash--cropped.jpg');
 		background-size: cover;
