Fix Liquid templating issue w/ default 'About' value on people page
- Fixes #310

- String size of empty ones comes up as '1' and content always evals to
  true, so am testing size == 1 and then, to be safe, also testing the
  blank and empty conditions

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -55,9 +55,13 @@ layout: default
 
 		<div class="person__description">
 			<div class="person-describe__title">About</div>
-				{% if content == empty %}<div class="person-describe__text">A Scholars' Lab alum.</div>{% else %}
-			<div class="person-describe__text">{{ content }}</div>
-{% endif %}
+			<div class="person-describe__text">
+			{% unless page.content.size == 1 or page.content == blank or page.content == empty %}
+				{{ content }}
+			{% else %}
+				A Scholars' Lab alum.
+			{% endunless %}
+			</div>
 			<div class="person-describe__category"> <!-- liquid testing -->
 				<h3>Categories</h3>
 				<ul>
