Wrap default 'About' in <p> for better formatting if CSS =/= load
- And so it matches formatting of default, which generates into <p>

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -59,7 +59,7 @@ layout: default
 			{% unless page.content.size == 1 or page.content == blank or page.content == empty %}
 				{{ content }}
 			{% else %}
-				A Scholars' Lab alum.
+				<p>A Scholars' Lab alum.</p>
 			{% endunless %}
 			</div>
 			<div class="person-describe__category"> <!-- liquid testing -->
