--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -424,7 +424,7 @@
 	justify-content: center;
 	align-items: center;
 	height: 100%;
-	border-left: 1px solid rgba(0,0,0,.3);;
+	border-left: 1px solid rgba(0,0,0,.3);
 	// wraps all content:
 	a {
 		position: relative;
@@ -447,8 +447,8 @@
 			transition: transform .3s;
 			&:hover, &:focus {
 				.research-item__num {
-					-webkit-transform: translate(0, .5em);
-					transform: translate(0, .5em);
+					-webkit-transform: translate(0, .25em);
+					transform: translate(0, .25em);
 				}
 				.research-item__pic {
 					div {
@@ -467,10 +467,11 @@
 
 .research-item__num {
 	position: relative;
-	font-family: "base-mono-wide", monospace;
-	font-size: 1.5rem;
+//	font-family: "base-mono-wide", monospace;
+	font-family: "Oswald", sans-serif;
+	font-size: 3rem;
 	font-weight: 700;
-	color: black;
+	color: hsla(186, 80%, 70%, 1); // black;
 	@media screen and (min-width: 500px) {
 		transition: transform .3s;
 	}
@@ -480,9 +481,9 @@
 
 .research-item__name {
 	position: relative;
-	min-height: 5.5em;
-	padding: 1em 0 .5em 0;
-	font-size: 1.5rem;
+	min-height: 5em;
+	padding: 1.5em 0 1em 0;
+	font-size: 1rem;
 	color: rgba(0,0,0,.5);
 }
 
@@ -492,18 +493,6 @@
 	position: relative;
 	width: 100%;
 	height: 250px;
-	box-shadow: 0 0 2px 1px rgba(0, 0, 0, .05);
-/*	&::before {
-		content: '';
-		position: absolute;
-		top: 4px;
-		left: 4px;
-		display: block;
-		height: 100%;
-		width: 100%;
-		background-image: repeating-linear-gradient(-45deg, transparent, transparent 2px, black 2px, black 4px, transparent 4px);
-	//	opacity: .5;
-	} */
 	div {
 		position: absolute;
 		height: 100%;
@@ -523,8 +512,9 @@
 
 .research-item__yr {
 	position: relative;
-	margin-top: 1.5em;
-	font-family: "base-mono-narrow", monospace;
+	margin-top: 1em;
+//	font-family: "base-mono-wide", monospace;
+	font-family: "Oswald", sans-serif;
 	font-weight: 200;
 	color: rgba(0,0,0,.5);
 }
