--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -498,6 +498,7 @@
 		height: 100%;
 		width: 100%;
 		overflow: hidden;
+		border-radius: 50%;
 		img {
 			max-width: 100%;
 			transition: transform .3s;
