--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -357,8 +357,8 @@
 .research-tracker__remaining {
 	height: 4px;
 	width: 66.67%; // set w/ JS
-//	set a polyfill color
-	background-image: repeating-linear-gradient(-45deg, transparent, transparent 2px, black 2px, black 4px, transparent 4px);
+	background-color: white;
+	background-image: repeating-linear-gradient(-45deg, white, white 2px, black 2px, black 4px, white 4px);
 	opacity: .8;
 }
 
