Explicitly set black as button color since no longer default

--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -292,6 +292,7 @@
 	font-size: 2rem;
 	font-family: "base-mono-wide", sans-serif;
 	font-weight: 900;
+	color: black;
 	transform: translate(0, -1px);
 	cursor: pointer;
 	-webkit-transition: transform .2s;
